--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.html",
     "dependencies": {
+        "axios": "^0.21.1",
         "express": "^4.17.1"
     },
     "devDependencies": {
