--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
-    "name": "y",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.html",
+    "name": "myapp",
+    "version": "0.1.0",
+    "private": true,
     "dependencies": {
-        "axios": "^0.21.1",
-        "express": "^4.17.1"
-    },
-    "devDependencies": {
-        "jest": "^26.6.3"
+      "@testing-library/jest-dom": "^5.11.10",
+      "@testing-library/react": "^11.2.6",
+      "@testing-library/user-event": "^12.8.3",
+      "react": "^17.0.2",
+      "react-dom": "^17.0.2",
+      "react-scripts": "4.0.3",
+      "web-vitals": "^1.1.1"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js",
-        "test-lab-3": "jest lab3.test.js",
-        "test-lab-4": "jest lab4.test.js",
-        "test-lab-5": "jest lab5.test.js"
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
     },
-    "author": "",
-    "license": "ISC"
-}
+    "eslintConfig": {
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ]
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    }
+  }
+  
